Attempt to fix blackout div height problem when too much companies

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,9 +18,10 @@ body{
   color:black;
   font: 1rem $secondary_font;
   margin : 0;
+  min-height: 100vh;
 }
 
-.rended_page{
+.rendered_page{
   display: flex;
   width: 100%;
   justify-content: center;
