--- a/app/assets/stylesheets/companies/_index.scss
+++ b/app/assets/stylesheets/companies/_index.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column ;
   width:40%;
+  margin:0;
 
   ul{
     list-style-type: none;
@@ -60,7 +61,7 @@
   left:0;
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: black;
   opacity: 50%;
 }
@@ -101,8 +102,8 @@
 
 #new_company_form{
   z-index: 2;
-  position: relative;
-  top:-200px;
+  position: absolute;
+  top:200px;
   margin: 0 auto;
   width: 400px;
   background-color:$grey250;
