--- a/app/assets/stylesheets/companies/_show.scss
+++ b/app/assets/stylesheets/companies/_show.scss
@@ -3,7 +3,6 @@
 .company_show_container {
   display: flex;
   flex-direction: column;
-  width:100%;
   padding : 20px;
 
   h2{
