--- a/app/assets/stylesheets/shared/_navbar.scss
+++ b/app/assets/stylesheets/shared/_navbar.scss
@@ -2,13 +2,19 @@
 
 .navbar_container{
   background-color : $light-bleuvert;
-  padding: 20px;
+  width:350px;
 
   h2{
     font: 1.1rem $secondary_font;
     letter-spacing: 1px;
     text-transform: uppercase;
   }
+}
+
+.navbar_sticky_wrapper{
+  position: sticky;
+  top: 0;
+  padding: 20px;
 }
 
 #navbar_title{
