--- a/app/assets/stylesheets/shared/_notice.scss
+++ b/app/assets/stylesheets/shared/_notice.scss
@@ -1,3 +1,3 @@
 .notice{
-  color: red;
+  color: rgb(187, 170, 14);
 }
